Adicionando ao projeto novas im, e refatorando menu-bar

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -28,4 +28,32 @@
   gamePrice="R$ 369,99"
 >
 </app-card>
+<app-card
+  gameCover="../../../assets/hl.jpg"
+  gameLabel="STANDARD"
+  gameType="DISC | PS5"
+  gamePrice="R$ 239,99"
+>
+</app-card>
+<app-card
+  gameCover="../../../assets/cd.jpg"
+  gameLabel="NEW"
+  gameType="DISC | PS4 PS5"
+  gamePrice="R$ 189,99"
+>
+</app-card>
+<app-card
+  gameCover="../../../assets/f2023.jpg"
+  gameLabel="STANDARD"
+  gameType="DISC  PS5"
+  gamePrice="R$ 339,99"
+>
+</app-card>
+<app-card
+  gameCover="../../../assets/gta.jpg"
+  gameLabel="DIGITAL"
+  gameType="DISC  PS5"
+  gamePrice="R$ 109,99"
+>
+</app-card>
 </div>
