--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -8,11 +8,5 @@
     height="32px"
     >
   </div>
-  <div class="menu-bar-item">
-    <ul>
-      <li><a href="">Youtube</a></li>
-      <li><a href="">Linkedin</a></li>
-      <li><a href="">GitHub</a></li>
-    </ul>
-  </div>
-</div>
+   <app-menu-bar-item></app-menu-bar-item>
+  </div> 
